--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -126,6 +126,7 @@
     var page_owner_icon = '';//用户头像
     var group_type = '';
     var group_relation_id = {% if group_relation_id %}'{{group_relation_id}}'{% else %}''{% endif %};
+    var product_id = {% if product_id %}'{{product_id}}'{% else %}''{% endif %};
 	$(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
@@ -283,7 +284,6 @@
                     product_id: product_id
                 },
                 success: function(data) {
-                    //TODO 传is_group_order,relation_belong_to过去
                     var relation_belong_to = data.relation_belong_to;
                     var data_href = "http://h5.weapp.com/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
                     window.open(data_href, '_tab');
@@ -317,8 +317,7 @@
             },
             success: function(data) {
                 console.log('JoinGroup success!!!!!!!!!!!');
-                //TODO 传is_group_order,group_relation_id过去
-                var data_href = "/workbench/jqm/preview/?woid=6&module=mall&model=order&action=edit&product_id=5&product_count=1&product_model_name=standard";
+                var data_href = "http://h5.weapp.com/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+group_relation_id+"&activity_id="+W.appRecordId;
                 window.open(data_href, '_tab');
             },
             error: function(data) {
