先提交，调列表的数据

--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -110,6 +110,19 @@
 		</thead>
 		<tbody>
 		  {{each(i, item) items}}
+<!--             <tr class="xui-product_itle" data-id="${item.id}">
+                <td>
+                    <div title="${item.name}" class="xui-group_name">
+                        团购名称:<a href="/apps/group/group/?id=${item.id}&related_page_id=${item.related_page_id}">${item.name}</a>
+                    </div>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr> -->
 			<tr data-id="${item.id}">
 				<td
 					class="tl pl25"
