修改上传证书页面提示

--- a/weapp/mall/templates/mall/editor/wx_cert_setting.html
+++ b/weapp/mall/templates/mall/editor/wx_cert_setting.html
@@ -35,9 +35,8 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/">百宝箱</a></li>
-			<li class="xa-open"><a href="/apps/red_packet/red_packets/">拼红包</a></li>
-			<li class="active">证书配置</li>
+			<li>配置管理</li>
+			<li class="xa-open"><a href="/mall2/weixin_certificate/">证书配置</a></li>
 		</ul>
 	</div>
     <div>
