mall/templates/mall/editor/promotion/card_exchange.html

--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -142,7 +142,7 @@ $(document).ready(function() {
             var snum = $(".xa-i-snum");
 			var endnum = $(".xa-i-endnum");
 			var isBind = $("option:selected").val();
-			data.push({isBind:isBind})
+			data.push({isBind:isBind});
 			for(i=0;i<money.length;i++){
 				var moneyData = money[i].value;
 				var integralData = integral[i].value;
