--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -354,20 +354,17 @@
         $('.xa-share').addClass('none');
         mask('hide');
     });
+
     // 活动规则
-    $('.xa-i-closebtn').click(function(){
-        $('.xa-i-rules-contentbox').addClass('none');
-        mask('hide');
-    });
     $('.xa-i-rules-title-content p').click(function(){
         $('.xa-i-rules-contentbox').removeClass('none');
         mask('show');
+        $('.xa-i-closebtn').click(function(){
+            $('.xa-i-rules-contentbox').addClass('none');
+            mask('hide');
+        });
     });
-    //未支付完成
-    $('.wa-i-btn-groupMsg-no').click(function(){
-        mask('hide');
-        $('.xui-groupMsg').addClass('none');
-    });
+
     // 邀请好友参团
     function openGuideMask(){
         mask('show');
@@ -383,6 +380,16 @@
         mask('show');
         $('.xui-groupMsg').removeClass('none');
         $('.xa-groupMsg').find('.xa-i-msg').html('开团支付未完成，是否继续？');
+        $('.wa-i-btn-groupMsg-yes').click(function(){
+            mask('hide');
+            $('.xui-groupMsg').addClass('none');
+            //todo 跳转到订单编辑页面
+        });
+        $('.wa-i-btn-groupMsg-no').click(function(){
+            mask('hide');
+            $('.xui-groupMsg').addClass('none');
+            //todo cancel_group_buy
+        });
     }
     function renderTime(seconds){
         seconds = parseInt(seconds);
